# scdataperf

./: CMakeLists.txt  GNUmakefile  Makefile  README.md  bootstrap.bash  dataperf.cpp  dataperf.sh  filter  require_cxx11.h  setup.profile  systemc.cmake
cmake/: sc-project_defaults.cmake  set_target.cmake
